--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>first class</title>
 </head>
 <body>
-    <h1>Hello world</h1>
-    <p>this is first paragraph</p>
+    <h1>Hello world!</h1>
+    <p>this is first paragraph</p>!
 </body>
 </html>
